--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Englition",
     "version": "1.0",
     "description": "翻訳→Notion保存をサポートするChrome拡張機能",
-    "browser_action": {
+    "action": {
         "default_popup": "index.html"
     },
     "permissions": [
